fixed the positioning of elements in the welcome page (they were missaligned after moving the nav-bar to the left)

--- a/apps/web/version/css/welcome.less
+++ b/apps/web/version/css/welcome.less
@@ -4,10 +4,10 @@
   
   #welcome {
     .linear-gradient(#55BEE5, #007CA5);
-    padding: 150px 80px 80px;
+    padding: 4rem 80px 80px;
     position: fixed !important;
     top: 0px;
-    left: 0;
+    left: 80px;
     right: 0;
     bottom: 0;
     width: auto !important;
@@ -76,7 +76,7 @@
     }
     
     .instantProfiles {
-      bottom: 380px;
+      bottom: 300px;
       left: 175px;
       
       .featureIcon {
@@ -85,7 +85,7 @@
     }
     
     .matching {
-      bottom: 290px;
+      bottom: 210px;
       left: 270px;
       
       .featureIcon {
@@ -94,7 +94,7 @@
     }
     
     .privacy {
-      bottom: 450px;
+      bottom: 370px;
       left: 380px;
       
       .featureIcon {
@@ -103,7 +103,7 @@
     }
     
     .datingStories {
-      bottom: 300px;
+      bottom: 220px;
       left: 500px;
       
       .featureIcon {
@@ -117,8 +117,8 @@
       height: 437px;
       display: block;
       position: fixed;
-      bottom: 0;
-      left: -66px;
+      bottom: -80px;
+      left: 14px;
       z-index: 4;
     }
     
@@ -146,8 +146,8 @@
       width: 100%;
       height: 450px;
       position: fixed;
-      bottom: 110px;
-      left: 35px;
+      bottom: 30px;
+      left: 115px;
       z-index: 2;
     
       .bubble {
